[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Ability/GameplayAbility_ActorSpawner_BulletSpawner.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Base/BulletSpawnerData.gd" type="Script" id=2]
[ext_resource path="res://src/Component/BulletSpawnerComponent.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Ability/Enna/GameplayAbility_Enna_HomingFeathers.gd" type="Script" id=4]
[ext_resource path="res://assets/audio/sfx/More sfx/Enna/enna feather series/Enna feather shoot Part1.wav" type="AudioStream" id=5]

[node name="GameplayAbility_Enna_HomingFeathers" instance=ExtResource( 1 )]
script = ExtResource( 4 )
AbilityCooldownSecond = 3.0
FullbodyAnimName = "attack12"
FullbodyAnimDuration = 1.0

[node name="AbilitySound" parent="." index="2"]
stream = ExtResource( 5 )

[node name="BulletSpawnerComponent" parent="." index="3"]
ActorToSpawnPath = "res://src/Ability/Enna/Enna_Bullet_Feathers_Phase1.tscn"

[node name="BulletSpawnerData" type="Position2D" parent="BulletSpawnerComponent" index="0"]
script = ExtResource( 2 )

[node name="BulletSpawnerData2" type="Position2D" parent="BulletSpawnerComponent" index="1"]
script = ExtResource( 2 )
BulletData_Rotation = 90.0

[node name="BulletSpawnerData3" type="Position2D" parent="BulletSpawnerComponent" index="2"]
script = ExtResource( 2 )
BulletData_Rotation = 180.0

[node name="BulletSpawnerData4" type="Position2D" parent="BulletSpawnerComponent" index="3"]
script = ExtResource( 2 )
BulletData_Rotation = 270.0

[node name="BulletSpawnerData5" type="Position2D" parent="BulletSpawnerComponent" index="4"]
script = ExtResource( 2 )
BulletData_Rotation = 45.0

[node name="BulletSpawnerData6" type="Position2D" parent="BulletSpawnerComponent" index="5"]
script = ExtResource( 2 )
BulletData_Rotation = 135.0

[node name="BulletSpawnerData7" type="Position2D" parent="BulletSpawnerComponent" index="6"]
script = ExtResource( 2 )
BulletData_Rotation = 225.0

[node name="BulletSpawnerData8" type="Position2D" parent="BulletSpawnerComponent" index="7"]
script = ExtResource( 2 )
BulletData_Rotation = 315.0

[node name="BulletSpawnerComponent2" parent="." index="4" instance=ExtResource( 3 )]
ActorToSpawnPath = "res://src/Ability/Enna/Enna_Bullet_Feathers.tscn"

[node name="BulletSpawnerData" type="Position2D" parent="BulletSpawnerComponent2" index="0"]
script = ExtResource( 2 )

[node name="BulletSpawnerData2" type="Position2D" parent="BulletSpawnerComponent2" index="1"]
script = ExtResource( 2 )
BulletData_Rotation = 90.0
BulletData_Delay = 0.1

[node name="BulletSpawnerData3" type="Position2D" parent="BulletSpawnerComponent2" index="2"]
script = ExtResource( 2 )
BulletData_Rotation = 180.0
BulletData_Delay = 0.2

[node name="BulletSpawnerData4" type="Position2D" parent="BulletSpawnerComponent2" index="3"]
script = ExtResource( 2 )
BulletData_Rotation = 270.0
BulletData_Delay = 0.3

[node name="BulletSpawnerData5" type="Position2D" parent="BulletSpawnerComponent2" index="4"]
script = ExtResource( 2 )
BulletData_Rotation = 45.0
BulletData_Delay = 0.4

[node name="BulletSpawnerData6" type="Position2D" parent="BulletSpawnerComponent2" index="5"]
script = ExtResource( 2 )
BulletData_Rotation = 135.0
BulletData_Delay = 0.5

[node name="BulletSpawnerData7" type="Position2D" parent="BulletSpawnerComponent2" index="6"]
script = ExtResource( 2 )
BulletData_Rotation = 225.0
BulletData_Delay = 0.6

[node name="BulletSpawnerData8" type="Position2D" parent="BulletSpawnerComponent2" index="7"]
script = ExtResource( 2 )
BulletData_Rotation = 315.0
BulletData_Delay = 0.7

[node name="BulletSpawnerComponent3" parent="." index="5" instance=ExtResource( 3 )]
ActorToSpawnPath = "res://src/Ability/Enna/Enna_Bullet_Feathers.tscn"

[node name="BulletSpawnerData" type="Position2D" parent="BulletSpawnerComponent3" index="0"]
script = ExtResource( 2 )

[node name="BulletSpawnerData2" type="Position2D" parent="BulletSpawnerComponent3" index="1"]
script = ExtResource( 2 )
BulletData_Rotation = 90.0

[node name="BulletSpawnerData3" type="Position2D" parent="BulletSpawnerComponent3" index="2"]
script = ExtResource( 2 )
BulletData_Rotation = 180.0

[node name="BulletSpawnerData4" type="Position2D" parent="BulletSpawnerComponent3" index="3"]
script = ExtResource( 2 )
BulletData_Rotation = 270.0

[node name="BulletSpawnerData5" type="Position2D" parent="BulletSpawnerComponent3" index="4"]
script = ExtResource( 2 )
BulletData_Rotation = 45.0

[node name="BulletSpawnerData6" type="Position2D" parent="BulletSpawnerComponent3" index="5"]
script = ExtResource( 2 )
BulletData_Rotation = 135.0

[node name="BulletSpawnerData7" type="Position2D" parent="BulletSpawnerComponent3" index="6"]
script = ExtResource( 2 )
BulletData_Rotation = 225.0

[node name="BulletSpawnerData8" type="Position2D" parent="BulletSpawnerComponent3" index="7"]
script = ExtResource( 2 )
BulletData_Rotation = 315.0
